wp-content/themes/reade-theme/src/styles/blocks/_primary-cta.scss
#main-content:has(.primary-cta) + #site-footer {
	@include respond-above(sm) {
		padding-top: 89px;
	}
}

/** can't do :has() with mozilla **/
@-moz-document url-prefix() {
	body.home #site-footer {
		@include respond-above(sm) {
			padding-top: 89px;
		}
	}
}

body:not(.home) {
	.cta-decor-bg {
		display: none;
	}
}

.cta-decor-bg {
    @include section-full;
	@apply absolute left-0 right-0;
	top: -300px;
	bottom: 0;
    background-color: rgba(0, 159, 198, 0.08);
}

.primary-cta {
	&:not(.primary-footer-cta--cta) {
		margin-top: 300px;
		position: relative;

		@include respond-below(sm) {
			margin-top: 35px;
		}

		&:before {
			background-color: #00bdec;
			height: min(185px, 14vw);
			min-height: 179px;

			@include respond-below(sm) {
				content: unset;
			}
		}
	}

	.primary-cta-main {
		z-index: 20;
		position: relative;
		top: -230px;
		margin-bottom: -320px;
		//aspect-ratio: 1232/492;
		position: relative;
		//padding: 77px 282px 108px 104px;
		padding-left: 104px;
		padding-top: 77px;
		padding-bottom: 108px;

		box-sizing: border-box;
		//min-height: 492px;

		@media (max-width: 1200px) {
			padding-right: min(104px, 7.22vw);
			padding-left: min(104px, 7.222vw);
			padding-top: min(77px, 5.347vw);
			padding-bottom: min(108px, 7.5vw);
		}

		@include respond-below(sm) {
			@apply section-full;
			top: unset;
			margin-bottom: unset;
			padding: 67px 48px;
		}

		img {
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			object-fit: cover;
			border-radius: 0px 35px;
			border: 5px solid #fff;
			z-index: -1;

			@include respond-below(sm) {
				border-radius: 0;
				border: unset;
				object-fit: fill;
			}
		}
	}

	.primary-cta-main-container {
		display: inline-flex;
		flex-direction: column;
		justify-content: center;
		align-items: flex-start;
		// padding: 81.004px 285.524px 81.004px 82px;
		// padding-left: 82px;
		// padding-right: 82px;
		// padding-top: 81px;
		// padding-bottom: 81px;
		padding: min(82px, 5.694vw);
		gap: 14.992px;

		border-radius: 10px;
		background-color: $white;
		box-sizing: border-box;
		position: relative;
		width: 68.67%;

		@media (max-width: 1200px) {
			width: 100%;
		}

		@include respond-below(sm) {
			padding: 42px 35px;
		}

		.primary-cta-title {
			color: var(--primary-900, #045);
			font-size: clamp(2.25rem, 1.65rem + 1.5vw, 3rem);
			font-style: normal;
			font-weight: 700;
			line-height: 1.2;
			letter-spacing: -2.4px;
            text-wrap: balance;
		}

		.primary-cta-subtext {
			color: var(--primary-900, #045);
			font-size: 16px;
			font-weight: 400;
			line-height: 1.5;
			max-width: 52ch;

			@media (max-width: 1200px) {
				max-width: 100%;
				margin-bottom: 10px;
			}

			@include respond-below(sm) {
				font-size: 14px;
				margin-bottom: 15px;
			}
		}

		.btn-green-light-green {
			width: 287px;
			text-align: center;
			position: absolute;
			right: -163px;
			top: 70%;
			font-weight: 700;
			font-size: 16px;

			@media (max-width: 1200px) {
				position: relative;
				right: 0;
				top: 0;
			}

			@include respond-below(sm) {
				width: 100%;
				padding-left: unset;
				padding-right: unset;
			}
		}
	}
}

